Adds intro and summary for table

--- a/mindset/creating-tools.ipynb
+++ b/mindset/creating-tools.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +218,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Critical Threshold Table: When Is It Worth Building a Tool?\n",
+    "\n",
+    "### Goal\n",
+    "\n",
+    "This script summarizes the **minimum annual workload** required to justify building an automation tool, based on varying development time.\n",
+    "\n",
+    "Instead of visualizing a single scenario, it answers:\n",
+    "\n",
+    "> _“If building a tool takes X days, how much manual effort (frequency × task time) do I need to save per year to make it worth it?”_\n",
+    "\n",
+    "### How It Works\n",
+    "\n",
+    "For each selected development time:\n",
+    "\n",
+    "- It finds the **smallest frequency × task time** product where the tool becomes worthwhile (based on a defined savings threshold, e.g. 50%)\n",
+    "- Results are shown in a simple table for easy comparison and decision-making\n",
+    "\n",
+    "### Why It’s Useful\n",
+    "\n",
+    "This table gives you **rules of thumb**:\n",
+    "\n",
+    "- Helps quickly decide if a task is worth automating\n",
+    "- Lets you reverse-engineer the break-even point based on task size and repetition\n",
+    "- Gives you a numerical baseline for planning dev investment\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -255,36 +285,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>255.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>255.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>1.93</td>\n",
        "      <td>494.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>4.94</td>\n",
        "      <td>1264.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>9.54</td>\n",
        "      <td>2442.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>20.24</td>\n",
        "      <td>5179.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>51.79</td>\n",
        "      <td>13257.11</td>\n",
        "    </tr>\n",
@@ -295,16 +315,14 @@
       "text/plain": [
        "   Dev Time (days)  Min (Frequency × Task Time)\n",
        "0             1.00                       255.95\n",
-       "1             1.00                       255.95\n",
-       "2             1.00                       255.95\n",
-       "3             1.93                       494.17\n",
-       "4             4.94                      1264.86\n",
-       "5             9.54                      2442.05\n",
-       "6            20.24                      5179.47\n",
-       "7            51.79                     13257.11"
+       "1             1.93                       494.17\n",
+       "2             4.94                      1264.86\n",
+       "3             9.54                      2442.05\n",
+       "4            20.24                      5179.47\n",
+       "5            51.79                     13257.11"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,11 +335,15 @@
     "dev_times_to_check = [0.1, 0.5, 1, 2, 5, 10, 20, 50]\n",
     "\n",
     "# Prepare output\n",
+    "seen_dev_times = set()\n",
     "threshold_rows = []\n",
     "\n",
     "for dev_time in dev_times_to_check:\n",
     "    # Find closest available value in simulation\n",
     "    closest_value = dev_times_days[np.abs(dev_times_days - dev_time).argmin()]\n",
+    "    if round(closest_value, 2) in seen_dev_times:\n",
+    "        continue  # skip duplicates\n",
+    "    seen_dev_times.add(round(closest_value, 2))\n",
     "    \n",
     "    # Filter for that dev time\n",
     "    df_dev = df[np.isclose(df['dev_time_days'], closest_value, atol=1e-3)].copy()\n",
@@ -344,6 +366,48 @@
     "# Convert to DataFrame\n",
     "threshold_df = pd.DataFrame(threshold_rows)\n",
     "threshold_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What Does This Table Tell Us?\n",
+    "\n",
+    "Each row says:\n",
+    "\n",
+    "> “If the tool takes **X days** to build, then you need to be doing at least **Y minutes of manual work per year** for it to be worth automating (at the 50% savings threshold).”\n",
+    "\n",
+    "That **Y value = frequency × task_time (minutes)**.\n",
+    "\n",
+    "### Examples:\n",
+    "\n",
+    "- **Dev Time = 1 day** → You only need **~256 minutes/year** of task time  \n",
+    "  → _That's just 26 tasks per year if each takes 10 minutes_\n",
+    "\n",
+    "- **Dev Time = 10 days** → You need **~2440 minutes/year**  \n",
+    "  → _Roughly 240 ten-minute tasks per year_\n",
+    "\n",
+    "- **Dev Time = 50 days** → Need a massive **13,257 minutes/year**  \n",
+    "  → _You'd need to save about 27 minutes daily over a whole year_\n",
+    "\n",
+    "### Key Insight\n",
+    "\n",
+    "> This scales **almost linearly** — doubling dev time roughly doubles the threshold product. That’s intuitive: more dev time requires more savings to be worthwhile.\n",
+    "\n",
+    "## How We Can Use This\n",
+    "\n",
+    "We can now **reverse-engineer decisions**:\n",
+    "\n",
+    "### _\"I have a 10-minute task done 100 times per year...\"_\n",
+    "\n",
+    "- That's `10 × 100 = 1000` minutes/year.\n",
+    "- Looking at the table, we'd justify **up to ~4 days** of dev effort.\n",
+    "\n",
+    "### _\"I want to spend 5 days to build a tool...\"_\n",
+    "\n",
+    "- Find the row: dev time ~5 days → min product ≈ 1265\n",
+    "- Any task-time × frequency combo above 1265 is **justified**\n"
    ]
   }
  ],
