unify both typed and untyped effort estimators

--- a/mindset/data-oo-design.ipynb
+++ b/mindset/data-oo-design.ipynb
@@ -23,7 +23,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable, Dict\n",
+    "\n",
+    "# Individual estimators\n",
+    "\n",
+    "def estimate_to_string_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields\n",
+    "    complexity = 1\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_equals_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 1\n",
+    "    complexity = 2\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_hash_code_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 1\n",
+    "    complexity = 2\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_copy_with_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 2\n",
+    "    complexity = 3\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_to_json_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 2\n",
+    "    complexity = 2\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_from_json_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 2\n",
+    "    complexity = 3\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "def estimate_constructor_effort(num_fields: int) -> dict:\n",
+    "    loc = num_fields + 1\n",
+    "    complexity = 1\n",
+    "    return {\"loc\": loc, \"complexity\": complexity}\n",
+    "\n",
+    "\n",
+    "# Registry of estimators\n",
+    "effort_estimators: Dict[str, Callable[[int], dict]] = {\n",
+    "    \"toString\": estimate_to_string_effort,\n",
+    "    \"equals\": estimate_equals_effort,\n",
+    "    \"hashCode\": estimate_hash_code_effort,\n",
+    "    \"copyWith\": estimate_copy_with_effort,\n",
+    "    \"toJson\": estimate_to_json_effort,\n",
+    "    \"fromJson\": estimate_from_json_effort,\n",
+    "    \"constructor\": estimate_constructor_effort,\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +282,7 @@
        "  'transformerClass': {'loc': 18, 'complexity': 28}}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +292,67 @@
     "field_types = [\"int\", \"String\", \"List<int>\", \"Map<String, dynamic>\", \"User\", \"bool?\"]\n",
     "report = estimate_total_effort_typed(field_types)\n",
     "report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Union\n",
+    "\n",
+    "def estimate_total_effort(\n",
+    "    fields: Union[int, List[str]],\n",
+    "    selected_functions: List[str] = None\n",
+    ") -> dict:\n",
+    "    \"\"\"\n",
+    "    Unified interface for estimating total implementation effort.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - fields: Either an integer (number of fields) or a list of field type strings.\n",
+    "    - selected_functions: Optional list of utility names to include.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Dictionary with total LOC, total complexity, and per-function breakdown.\n",
+    "    \"\"\"\n",
+    "    if isinstance(fields, int):\n",
+    "        # Use untyped estimators\n",
+    "        estimators = effort_estimators\n",
+    "        get_estimate = lambda fn: estimators[fn](fields)\n",
+    "    elif isinstance(fields, list):\n",
+    "        # Use typed estimators\n",
+    "        estimators = typed_effort_estimators\n",
+    "        get_estimate = lambda fn: estimators[fn](fields)\n",
+    "    else:\n",
+    "        raise ValueError(\"`fields` must be either an integer or a list of type strings.\")\n",
+    "\n",
+    "    if selected_functions is None:\n",
+    "        selected_functions = list(estimators.keys())\n",
+    "\n",
+    "    breakdown = {}\n",
+    "    total_loc = 0\n",
+    "    total_complexity = 0\n",
+    "\n",
+    "    for fn in selected_functions:\n",
+    "        if fn in estimators:\n",
+    "            result = get_estimate(fn)\n",
+    "            breakdown[fn] = result\n",
+    "            total_loc += result[\"loc\"]\n",
+    "            total_complexity += result[\"complexity\"]\n",
+    "\n",
+    "    return {\n",
+    "        \"total_loc\": total_loc,\n",
+    "        \"total_complexity\": total_complexity,\n",
+    "        \"breakdown\": breakdown\n",
+    "    }\n",
+    "\n",
+    "# Untyped: using just the field count\n",
+    "estimate_total_effort(fields=5)\n",
+    "\n",
+    "# Typed: using list of field types\n",
+    "field_types = [\"int\", \"String\", \"List<int>\", \"User\", \"bool?\"]\n",
+    "estimate_total_effort(fields=field_types)\n"
    ]
   }
  ],
