--- a/mindset/data-oo-design.ipynb
+++ b/mindset/data-oo-design.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "  'transformerClass': {'loc': 18, 'complexity': 28}}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'total_loc': 55,\n",
+       " 'total_complexity': 83,\n",
+       " 'breakdown': {'toString': {'loc': 7, 'complexity': 12},\n",
+       "  'equals': {'loc': 8, 'complexity': 12},\n",
+       "  'copyWith': {'loc': 9, 'complexity': 13},\n",
+       "  'validationClass': {'loc': 17, 'complexity': 24},\n",
+       "  'transformerClass': {'loc': 14, 'complexity': 22}}}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from typing import Union\n",
     "\n",
@@ -345,14 +362,40 @@
     "        \"total_loc\": total_loc,\n",
     "        \"total_complexity\": total_complexity,\n",
     "        \"breakdown\": breakdown\n",
-    "    }\n",
-    "\n",
-    "# Untyped: using just the field count\n",
-    "estimate_total_effort(fields=5)\n",
-    "\n",
-    "# Typed: using list of field types\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Untyped: using just the field count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimate_total_effort(fields=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typed: using list of field types\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "field_types = [\"int\", \"String\", \"List<int>\", \"User\", \"bool?\"]\n",
-    "estimate_total_effort(fields=field_types)\n"
+    "estimate_total_effort(fields=field_types)"
    ]
   }
  ],
