Flat vs Modular model

--- a/mindset/data-oo-design.ipynb
+++ b/mindset/data-oo-design.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "  'transformerClass': {'loc': 18, 'complexity': 28}}}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,26 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'total_loc': 55,\n",
-       " 'total_complexity': 83,\n",
-       " 'breakdown': {'toString': {'loc': 7, 'complexity': 12},\n",
-       "  'equals': {'loc': 8, 'complexity': 12},\n",
-       "  'copyWith': {'loc': 9, 'complexity': 13},\n",
-       "  'validationClass': {'loc': 17, 'complexity': 24},\n",
-       "  'transformerClass': {'loc': 14, 'complexity': 22}}}"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Union\n",
     "\n",
@@ -374,9 +357,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'total_loc': 44,\n",
+       " 'total_complexity': 14,\n",
+       " 'breakdown': {'toString': {'loc': 5, 'complexity': 1},\n",
+       "  'equals': {'loc': 6, 'complexity': 2},\n",
+       "  'hashCode': {'loc': 6, 'complexity': 2},\n",
+       "  'copyWith': {'loc': 7, 'complexity': 3},\n",
+       "  'toJson': {'loc': 7, 'complexity': 2},\n",
+       "  'fromJson': {'loc': 7, 'complexity': 3},\n",
+       "  'constructor': {'loc': 6, 'complexity': 1}}}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "estimate_total_effort(fields=5)"
    ]
@@ -390,12 +392,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'total_loc': 55,\n",
+       " 'total_complexity': 83,\n",
+       " 'breakdown': {'toString': {'loc': 7, 'complexity': 12},\n",
+       "  'equals': {'loc': 8, 'complexity': 12},\n",
+       "  'copyWith': {'loc': 9, 'complexity': 13},\n",
+       "  'validationClass': {'loc': 17, 'complexity': 24},\n",
+       "  'transformerClass': {'loc': 14, 'complexity': 22}}}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "field_types = [\"int\", \"String\", \"List<int>\", \"User\", \"bool?\"]\n",
     "estimate_total_effort(fields=field_types)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A - Flat Model\n",
+    "\n",
+    "All fields live in a single \"mega\" concept (class) — say, 100 primitive fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_flat_model(num_fields: int) -> dict:\n",
+    "    \"\"\"\n",
+    "    Construct a flat model where all fields are primitive.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary representing a single concept with all fields.\n",
+    "    \"\"\"\n",
+    "    field_types = [\"int\"] * num_fields\n",
+    "    return {\n",
+    "        \"FlatConcept\": field_types\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### B - Modular Model\n",
+    "\n",
+    "Those same fields are distributed across child concepts, and the parent concept holds references to those. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_modular_model(total_fields: int, fields_per_child: int) -> dict:\n",
+    "    \"\"\"\n",
+    "    Constructs a modular model:\n",
+    "    - Divides fields into child concepts.\n",
+    "    - A parent concept holds references to the child concepts.\n",
+    "\n",
+    "    Returns:\n",
+    "        Dictionary mapping concept names to their list of field types.\n",
+    "    \"\"\"\n",
+    "    if total_fields % fields_per_child != 0:\n",
+    "        raise ValueError(\"total_fields must be divisible by fields_per_child.\")\n",
+    "\n",
+    "    num_children = total_fields // fields_per_child\n",
+    "    model = {}\n",
+    "\n",
+    "    # Create child concepts\n",
+    "    for i in range(num_children):\n",
+    "        concept_name = f\"ChildConcept{i + 1}\"\n",
+    "        model[concept_name] = [\"int\"] * fields_per_child\n",
+    "\n",
+    "    # Create parent concept with references to all child concepts\n",
+    "    parent_fields = list(model.keys())  # Treat each child as a field (reference)\n",
+    "    model[\"ParentConcept\"] = parent_fields  # These are nested references\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimation per Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate_model_effort(model: dict) -> dict:\n",
+    "    \"\"\"\n",
+    "    Estimate total effort for a model (dict of concept -> fields).\n",
+    "    \n",
+    "    Each concept's effort is estimated using the unified interface.\n",
+    "    \"\"\"\n",
+    "    total_loc = 0\n",
+    "    total_complexity = 0\n",
+    "    concept_breakdown = {}\n",
+    "\n",
+    "    for concept_name, field_types in model.items():\n",
+    "        result = estimate_total_effort(fields=field_types)\n",
+    "        concept_breakdown[concept_name] = result\n",
+    "        total_loc += result[\"total_loc\"]\n",
+    "        total_complexity += result[\"total_complexity\"]\n",
+    "\n",
+    "    return {\n",
+    "        \"total_loc\": total_loc,\n",
+    "        \"total_complexity\": total_complexity,\n",
+    "        \"concept_breakdown\": concept_breakdown\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison Framework"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_flat_vs_modular(\n",
+    "    total_fields: int,\n",
+    "    fields_per_child: int,\n",
+    "    selected_functions: List[str] = None\n",
+    ") -> dict:\n",
+    "    \"\"\"\n",
+    "    Run A/B test between flat and modular models.\n",
+    "\n",
+    "    Returns:\n",
+    "        Dictionary with effort metrics for both models and their difference.\n",
+    "    \"\"\"\n",
+    "    flat_model = build_flat_model(total_fields)\n",
+    "    modular_model = build_modular_model(total_fields, fields_per_child)\n",
+    "\n",
+    "    flat_effort = estimate_model_effort(flat_model)\n",
+    "    modular_effort = estimate_model_effort(modular_model)\n",
+    "\n",
+    "    return {\n",
+    "        \"flat_model\": flat_effort,\n",
+    "        \"modular_model\": modular_effort,\n",
+    "        \"delta\": {\n",
+    "            \"loc\": modular_effort[\"total_loc\"] - flat_effort[\"total_loc\"],\n",
+    "            \"complexity\": modular_effort[\"total_complexity\"] - flat_effort[\"total_complexity\"]\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_model': {'total_loc': 706,\n",
+       "  'total_complexity': 706,\n",
+       "  'concept_breakdown': {'FlatConcept': {'total_loc': 706,\n",
+       "    'total_complexity': 706,\n",
+       "    'breakdown': {'toString': {'loc': 100, 'complexity': 101},\n",
+       "     'equals': {'loc': 101, 'complexity': 101},\n",
+       "     'copyWith': {'loc': 102, 'complexity': 102},\n",
+       "     'validationClass': {'loc': 203, 'complexity': 202},\n",
+       "     'transformerClass': {'loc': 200, 'complexity': 200}}}}},\n",
+       " 'modular_model': {'total_loc': 906,\n",
+       "  'total_complexity': 1046,\n",
+       "  'concept_breakdown': {'ChildConcept1': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept2': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept3': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept4': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept5': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept6': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept7': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept8': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept9': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ChildConcept10': {'total_loc': 76,\n",
+       "    'total_complexity': 76,\n",
+       "    'breakdown': {'toString': {'loc': 10, 'complexity': 11},\n",
+       "     'equals': {'loc': 11, 'complexity': 11},\n",
+       "     'copyWith': {'loc': 12, 'complexity': 12},\n",
+       "     'validationClass': {'loc': 23, 'complexity': 22},\n",
+       "     'transformerClass': {'loc': 20, 'complexity': 20}}},\n",
+       "   'ParentConcept': {'total_loc': 146,\n",
+       "    'total_complexity': 286,\n",
+       "    'breakdown': {'toString': {'loc': 20, 'complexity': 41},\n",
+       "     'equals': {'loc': 21, 'complexity': 41},\n",
+       "     'copyWith': {'loc': 22, 'complexity': 42},\n",
+       "     'validationClass': {'loc': 43, 'complexity': 82},\n",
+       "     'transformerClass': {'loc': 40, 'complexity': 80}}}}},\n",
+       " 'delta': {'loc': 200, 'complexity': 340}}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = compare_flat_vs_modular(total_fields=100, fields_per_child=10)\n",
+    "result"
    ]
   }
  ],
