with selected_functions

--- a/mindset/data-oo-design.ipynb
+++ b/mindset/data-oo-design.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "  'transformerClass': {'loc': 18, 'complexity': 28}}}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "  'constructor': {'loc': 6, 'complexity': 1}}}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "  'transformerClass': {'loc': 14, 'complexity': 22}}}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,22 +496,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def estimate_model_effort(model: dict) -> dict:\n",
+    "def estimate_model_effort(model: dict, selected_functions: List[str] = None) -> dict:\n",
     "    \"\"\"\n",
-    "    Estimate total effort for a model (dict of concept -> fields).\n",
-    "    \n",
-    "    Each concept's effort is estimated using the unified interface.\n",
+    "    Estimate total effort for a model with optional function filtering.\n",
     "    \"\"\"\n",
     "    total_loc = 0\n",
     "    total_complexity = 0\n",
     "    concept_breakdown = {}\n",
     "\n",
     "    for concept_name, field_types in model.items():\n",
-    "        result = estimate_total_effort(fields=field_types)\n",
+    "        result = estimate_total_effort(fields=field_types, selected_functions=selected_functions)\n",
     "        concept_breakdown[concept_name] = result\n",
     "        total_loc += result[\"total_loc\"]\n",
     "        total_complexity += result[\"total_complexity\"]\n",
@@ -532,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,16 +540,13 @@
     "    selected_functions: List[str] = None\n",
     ") -> dict:\n",
     "    \"\"\"\n",
-    "    Run A/B test between flat and modular models.\n",
-    "\n",
-    "    Returns:\n",
-    "        Dictionary with effort metrics for both models and their difference.\n",
+    "    Run A/B test between flat and modular models using selected utilities.\n",
     "    \"\"\"\n",
     "    flat_model = build_flat_model(total_fields)\n",
     "    modular_model = build_modular_model(total_fields, fields_per_child)\n",
     "\n",
-    "    flat_effort = estimate_model_effort(flat_model)\n",
-    "    modular_effort = estimate_model_effort(modular_model)\n",
+    "    flat_effort = estimate_model_effort(flat_model, selected_functions)\n",
+    "    modular_effort = estimate_model_effort(modular_model, selected_functions)\n",
     "\n",
     "    return {\n",
     "        \"flat_model\": flat_effort,\n",
@@ -560,7 +555,7 @@
     "            \"loc\": modular_effort[\"total_loc\"] - flat_effort[\"total_loc\"],\n",
     "            \"complexity\": modular_effort[\"total_complexity\"] - flat_effort[\"total_complexity\"]\n",
     "        }\n",
-    "    }"
+    "    }\n"
    ]
   },
   {
@@ -572,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -669,13 +664,13 @@
        " 'delta': {'loc': 200, 'complexity': 340}}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = compare_flat_vs_modular(total_fields=100, fields_per_child=10)\n",
+    "result = compare_flat_vs_modular(100, 10, selected_functions=[\"toString\", \"equals\"])\n",
     "result"
    ]
   }
